# cayman-site

./: .gitignore  CLAUDE.md  CNAME  Caddyfile  Dockerfile  SESSION_HANDOFF.md  docker-compose.yml  index.html  run_local.sh
.claude/: settings.json
.claude/commands/: dev.md
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  errors.rs  main.rs
backend/src/routes/: health.rs  hello.rs  mod.rs
frontend/: Caddyfile  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  main.ts
frontend/src/styles/: main.css  variables.css
