[package]
name = "cayman-backend"
version = "0.1.0"
edition = "2021"
description = "Backend for cayman.fyi — a Rust learning playground and portfolio"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
